Update to use the TailwindCSS standalone CLI

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
     <link rel="alternate" type="application/rss+xml" title="RSS feed" href="{{ config.base_url | safe }}/rss.xml" />
 
     <!-- Stylesheets -->
-    <link href="{{get_url(path='styles/main.css',cachebust=true)}}" rel="stylesheet" type="text/css" />
+    <link href="{{get_url(path='static/styles/main.css',cachebust=true)}}" rel="stylesheet" type="text/css" />
 
     {% block head %}
     {% endblock head %}
